--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -140,6 +140,17 @@
     ],
     "order": 1,
     "title": "Community Partners"
+  }, {
+    "logos": [
+      {
+        "order": 0,
+        "logoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/partners%2Fjetbrains-logo.png?alt=media&token=eeec0c50-d359-4232-b3da-1b4d5a4b9ed8",
+        "name": "JetBrains",
+        "url": "https://www.jetbrains.com"
+      }
+    ],
+    "order": 1,
+    "title": "Supporters"
   }],
   "schedule": {
     "2019-10-05": {
@@ -520,7 +531,7 @@
     "jasper": {
       "bio": "Long term software developer turned CEO. I typically find myself bridging the worlds of technology management and technology delivery which means looking for ways to improve software and in particular mobile apps are delivered.",
       "company": "Snapp Mobile",
-      "country": "Munich, Germany",
+      "country": "London, UK",
       "featured": false,
       "name": "Jasper Morgan",
       "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/jasper_no_beer.jpg",
