Add kotlin/everywhere logo to workshop

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -348,7 +348,7 @@
       "language": "English",
       "title": "Challenges in incorporating ML models in corporate business environment",
       "speakers": ["momchil"],
-      "tags": ["Machine Learning"]
+      "tags": ["ML"]
     },
     "115": {
       "description": "Coffee break.",
