--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -312,7 +312,8 @@
       "language": "English",
       "title": "Using Kotlin for JS Client and JVM Server",
       "speakers": ["alexander_podkhalyuzin"],
-      "tags": ["Kotlin", "Kotlin Everywhere", "Javascript"]
+      "tags": ["Kotlin", "Kotlin Everywhere", "Javascript"],
+      "imageUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/session-logos%2Fkotlin-everywhere-yellow-sofia.png?alt=media&token=5a564363-28df-47fe-8d6c-22f268f8ddf3"
     },
     "109": {
       "description": "Lunch.",
@@ -357,7 +358,8 @@
       "language": "English",
       "title": "Cross-platform tools in the real world",
       "speakers": ["juhani", "jasper"],
-      "tags": ["Kotlin", "Flutter", "Android", "iOS", "Kotlin Multi-Platform"]
+      "tags": ["Kotlin", "Flutter", "Android", "iOS", "Kotlin Multi-Platform"],
+      "imageUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/session-logos%2Fkotlin-everywhere-yellow-sofia.png?alt=media&token=5a564363-28df-47fe-8d6c-22f268f8ddf3"
     },
     "117": {
       "description": "Lecture 10.",
